syntax = "proto3";
package plugins;

option go_package = "get.porter.sh/porter/pkg/signing/plugins/proto";

message SignRequest {
  string Ref = 1;
}

message VerifyRequest {
  string Ref = 1;
}

message ConnectRequest {}

message SignResponse {}

message VerifyResponse {}

message ConnectResponse {}

service SigningProtocol {
  rpc Sign(SignRequest) returns (SignResponse);
  rpc Verify(VerifyRequest) returns (VerifyResponse);
  rpc Connect(ConnectRequest) returns (ConnectResponse);
}